chacha20: Add generic vectorized chacha20 implementation
Exploit modern simd to calculate 2/4/6/8/16 states at a time depending on the
size of the input.

Demonstrates a 2x speedup on x86-64 and 3x for arm+neon. Platforms which
require runtime detection (avx2/avx512) improve performance even further, and
will come as a follow-up.

Rather than hand-writing assembly or using arch-specific intrinsics, this is
written using compiler built-ins understood by gcc and clang.

In practice (at least on x86_64 and armv8), the compilers are able to produce
assembly that's not much worse than hand-written.

This means that every architecture can benefit from its own vectorized
instructions without having to write/maintain an implementation for each one.
But because each will vary in ability to exploit the parallelism, we allow
(via ifdefs) each architecture to opt-out of some or all multi-state
calculation at compile-time..

Here, as a starting point, x86-64 and arm+neon have been defined based on local
benchmarks.

--- a/src/crypto/CMakeLists.txt
+++ b/src/crypto/CMakeLists.txt
@@ -5,6 +5,7 @@
 add_library(bitcoin_crypto STATIC EXCLUDE_FROM_ALL
   aes.cpp
   chacha20.cpp
+  chacha20_vec_base.cpp
   chacha20poly1305.cpp
   hex_base.cpp
   hkdf_sha256_32.cpp
